tests/Asm/negative/test002.jva
-- invalid memory access

type list {
  nil : list;
  cons : * -> list -> list;
}

function hd(list) {
  push arg[0].cons[0];
  ret;
}

function main() {
  alloc nil;
  tcall hd;
}
